@@ -356,9 +356,6 @@ vips_binary_class_init( VipsBinaryClass *class )
 
 	GParamSpec *pspec;
 
-	gobject_class->set_property = vips_object_set_property;
-	gobject_class->get_property = vips_object_get_property;
-
 	vobject_class->build = vips_binary_build;
 
 	/* Create properties.
